fix header / navbar on mobile

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -65,9 +65,9 @@
 /*		General CSS		*/
 body{
 	background: #faf9f9;
-	padding: 0px;
-	margin: 0px;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
+	/* Needed for fixed top navbar*/
+	padding-top: 100px;
 }
 
 a:hover{
@@ -93,101 +93,12 @@ h1 {
 }
 
 /*		Header 		*/
-
-header{
-	position: relative;
-	display: block;
-	width: 100%;
-	height: 130px;
-	z-index: 99;
-/*	background-color: #41c17d;
-	background-color: #dfdfdf;
-*/
-/*	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -o-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -webkit-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-*/}
-
-header .logo{
-	display: table-cell;
-	margin: 24px 100px 0 0;
+.navbar {
+	height: 120px;
 }
 
-header .burger_icon{
-	display: none;
-	float: right;
-	background: #ffffff;
-	padding: 5px 10px;
-	text-transform: uppercase;
-
-	color: #43b779;
-	font-family: "open_regular", Helvetica, Arial, sans-serif;
-	font-size: 14px;
-
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-
-	margin: 45px 10px 0 0;
-}
-
-header .burger_icon:hover{
-	cursor: pointer;
-}
-
-header .burger_icon.active{
-	background: #359663;
-	color: #ffffff;
-}
-
-header nav{
-	margin-top: 50px;
-	display: table-cell;
-}
-
-header nav li{
-	float: left;
-	margin-left: 40px;
-}
-
-header nav li:first-child{
-	margin: 0;
-}
-
-header nav li a{
-	color: #222;
-	font-family: "open_regular", Helvetica, Arial, sans-serif;
-	font-size: 1.5em;
-
-	transition: all .2s linear;
-	-o-transition: all .2s linear;
-	-moz-transition: all .2s linear;
-	-webkit-transition: all .2s linear;
-}
-
-header nav li a:hover,
-header nav li a:focus{
-	text-decoration: none;
-	color: #B7EFD1!important;
-}
-
-header .social{
-	display: table-cell;
-	margin-top: 45px;
-}
-
-header .social li{
-	float: left;
-	margin-left: 20px;
-}
-
-header .social li:first-child{
-	margin: 0;
-}
-
-header .contact {
-	padding-top: 46px;
+.navbar-nav {
+	padding-top: 10px;
 }
 
 .contact p {
@@ -199,11 +110,22 @@ header .contact {
 }
 
 .logo img {
-	width: 330px;
+	height: 98px;
+}
+
+@media (max-width: 767px) {
+	.logo img {
+		height: 54px;
+		margin-left:auto;
+		margin-right:auto;
+	}
+
+	.navbar-nav {
+		text-align: center;
+	}
 }
 
 /*		Hero section 		*/
-
 .hero{
 	display: block;
 	position: relative;
@@ -630,14 +552,7 @@ footer .copyright a{
 
 
 
-
-
-
-
-
-
 /*		Responsive CSS 		*/
-
 @media (max-width: 360px) {
 	.featured_on li{
 		display: block;
@@ -646,63 +561,6 @@ footer .copyright a{
 }
 
 @media (max-width: 767px) {
-
-
-	/*		Header 		*/
-	header .logo{
-		margin-right: 0;
-	}
-
-	header .burger_icon{
-		display: block;
-	}
-
-	header nav{
-		width: 100%;
-		float: none;
-		background: #47ad76;
-		position: absolute;
-		margin-top: 130px;
-		left: 0;
-		display: none;
-	}
-
-	header nav.show{
-		display: block;
-	}
-
-
-	header nav li{
-		display: block;
-		width: 100%;
-		margin: 0;
-		text-align: center;
-	}
-
-	header nav li a{
-		display: block;
-		width: 100%;	
-		padding: 20px 0;
-		border-bottom: 1px solid #389965;
-	}
-
-	header nav li:first-child a{
-		border-top: 1px solid #389965;
-	}
-
-	header .social{
-		display: none;
-	}
-
-	header .social li{
-		margin-left: 10px;
-	}
-
-
-
-
-
-
 	/*		Hero section 		*/
 	.hero .caption{
 		margin-left: 0;
@@ -716,10 +574,6 @@ footer .copyright a{
 		text-align: center;
 	}
 
-
-
-
-
 	/*		Featured on section		*/
 	.featured_on{
 		padding: 25px 0 5px 0!important;
@@ -728,11 +582,6 @@ footer .copyright a{
 	.featured_on ul li{
 		margin-bottom: 25px!important;
 	}
-
-
-
-
-
 
 	/*		About Section 		*/
 	.about .features_list {
@@ -754,11 +603,6 @@ footer .copyright a{
 		display: block;
 		margin-top: 20px;
 	}
-
-
-
-
-
 
 	/*		Subscription section 		*/
 	.sub_box #mc-email,
